sumo/tests/dfrouter/errors/network/edge/root__edge#to__ungiven1/errors.dfrouter
Error: Missing to-node in edge '1'.
Error: An unknown edge occured (id='1').
Quitting (on error).
